// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTypographyFromTheme should return the requested typography from theme 1`] = `
Array [
  "
    ",
  "
  color: ",
  "#000000",
  ";
  font-weight: ",
  "400",
  ";
  font-size: ",
  "16px",
  ";
  letter-spacing: ",
  "-0.01562em",
  ";
  line-height: ",
  "22px",
  ";
  margin-bottom: ",
  "0",
  ";
",
  "
    ",
  [Function],
  "
  ",
]
`;

exports[`mapToBreakpoints should return a style with 3 breakpoints and corresponding values 1`] = `
Array [
  "
    ",
  "width: 100px;
        @media screen and (min-width: 375.02px) {
          width: 70px;
        }
      
        @media screen and (min-width: 414.02px) {
          width: 50px;
        }
      ",
  "
  ",
]
`;

exports[`mapToBreakpoints should return a style with 3 breakpoints and corresponding values 2`] = `
Array [
  "
    ",
  "flex-basis: 500px;
        @media screen and (min-width: 375.02px) {
          flex-basis: 600px;
        }
      
        @media screen and (min-width: 414.02px) {
          flex-basis: 200px;
        }
      ",
  "
  ",
]
`;

exports[`mapToBreakpoints should return only return the possible results if the limit has reached 1`] = `
Array [
  "
    ",
  "width: 100px;
        @media screen and (min-width: 375.02px) {
          width: 70px;
        }
      
        @media screen and (min-width: 414.02px) {
          width: 50px;
        }
      
        @media screen and (min-width: 540.02px) {
          width: 100px;
        }
      
        @media screen and (min-width: 768.02px) {
          width: 70px;
        }
      
        @media screen and (min-width: 1024.02px) {
          width: 50px;
        }
      
        @media screen and (min-width: 1200.02px) {
          width: 100px;
        }
      
        @media screen and (min-width: 1430.02px) {
          width: 70px;
        }
      
        @media screen and (min-width: 1920.02px) {
          width: 50px;
        }
      
        @media screen and (min-width: 2560.02px) {
          width: 50px;
        }
      ",
  "
  ",
]
`;
